--- a/Missions_to_Mars/Step1_Scraping/mission_to_mars.ipynb
+++ b/Missions_to_Mars/Step1_Scraping/mission_to_mars.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -19,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,19 +55,19 @@
     }
    ],
    "source": [
-    "# Setup splinter\n",
+    "# define splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser('chrome', **executable_path, headless=False)\n",
     "\n",
-    "#url to scrap\n",
+    "#define url \n",
     "url = 'https://redplanetscience.com/'\n",
     "browser.visit(url)\n",
     "\n",
-    "#find dates, titles and paragraphs\n",
+    "#soup setup\n",
     "html = browser.html\n",
     "soup = bs(html, 'html.parser')\n",
     "\n",
-    "dates = soup.find_all('div', class_= 'list_date')\n",
+    "#define search\n",
     "titles = soup.find_all('div', class_= 'content_title')\n",
     "paragraphs = soup.find_all('div', class_= 'list_date')\n",
     "\n",
@@ -154,7 +147,7 @@
     }
    ],
    "source": [
-    "#Save data\n",
+    "#store data\n",
     "\n",
     "articles = []\n",
     "for i in range(0, len(dates)):\n",
